# create-fastapi-app

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/create_fastapi_app/: cli.py  templates.py
