[project]
name = "create-fastapi-app"
version = "0.1.0"
description = "Scaffold a FastAPI + SQLAlchemy (async) + Alembic backend from the CLI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []
keywords = ["fastapi", "sqlalchemy", "alembic", "scaffold", "template", "cli"]

[project.scripts]
create-fastapi-app = "create_fastapi_app.cli:main"

[project.urls]
Homepage = "https://github.com/YOURNAME/create-fastapi-app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/create_fastapi_app"]
